added dark/light mode switcher

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <a href="../" class="home-button" data-section="home">
     <i class="fas fa-home"></i>
     </a>
+    <!--Dark/Light switch-->
+    <button id="theme-toggle" class="theme-toggle"> <i id="icon-moon" class="fas fa-moon"></i> 
+      <i id="icon-sun" class="fas fa-sun" style="display:none;"></i>
+
+    </button>
     <h1>km-X-zn-I-³-</h1>
     <nav>
       <ul class="nav-menu">
@@ -47,7 +52,10 @@
   </div>
   <!-- About Me -->
   <section id="about" class="page-section hidden">
-    <h2></h2>
+    <div><h2>Tech Stack</h2></div>
+    <img src="https://skills.syvixor.com/api/icons?i=linux,arch,android,vim,neovim,git,github,html,css,sql,bash,python,c,metasploit"
+    alt="tech_stack" class="responsive-img">
+    <br><br>
     <p>Cyber security enthusiast</p>
     <p>Curious mind | breaking systems to secure them</p>
   </section>
