fixed writeup/home position

--- a/writeups/sql-injection.html
+++ b/writeups/sql-injection.html
@@ -20,16 +20,17 @@
     }
 
     header {
-      position: relative;
-      text-align: center;
-      padding: 2rem;
-      border-bottom: 1px solid #333;
+    position: relative;       /* allow absolute child positioning */
+    text-align: center;
+    padding: 0.1rem;
+    margin-bottom: 0.5rem;
+    margin-top: 2rem;
     }
 
     .home-button {
       position: absolute;
-      top: 1rem;
-      left: 1rem;
+      top: 2.5rem;
+      left: 2.5rem;
       color: #00ff9f;
       text-decoration: none;
     }
@@ -90,10 +91,10 @@
 <body>
   <header>
     <!-- Home icon -->
-    <a href="../index.html" class="home-button">
+    <a href="../index.html" class="home-button" left:"2">
       <i class="fas fa-home"></i>
     </a>
-    <h1 style="font-size: 4rem;" >Writeups</h1>
+    <h1 style="font-size: 2.5rem;" >Writeups</h1>
   </header>
 
   <div class="writeup-page">
